# PQrypt

./: .gitignore  README.md
Pineapple/: opt.txt
Pineapple/app/: build.gradle.kts  lint-baseline.xml
Pineapple/app/src/main/: AndroidManifest.xml  CMakeLists.txt
Pineapple/app/src/main/cpp/: CMakeLists.txt  c_ffi.h  rusty_crypto_jni.cpp
Pineapple/app/src/main/cpp/rusty_api/: Cargo.toml
Pineapple/app/src/main/cpp/rusty_api/.cargo/: config.toml
Pineapple/app/src/main/cpp/rusty_api/include/: c_ffi.h  rust_cffi_deprecated.h
Pineapple/app/src/main/cpp/rusty_api/src/: c_ffi.rs  cipher_1024.rs
Pineapple/app/src/main/cpp/rusty_api/src/rusty_api/: api.rs  asymmetric.rs  constants_errors.rs  hybrid.rs  mod.rs  symmetric.rs  utils.rs
Pineapple/app/src/main/java/com/pineapple/app/: BluetoothDeviceAdapter.kt  BluetoothKeyExchangeActivity.kt  FileEncryptionActivity.kt  HelpActivity.kt  KeyExchangeModeActivity.kt  KeyExchangeProcessActivity.kt  MainActivity.kt  PQCKeyExchangeActivity.kt  PasswordSettingsActivity.kt  PasswordVaultActivity.kt  PineappleAutofillService.kt  RustyCrypto.java
Pineapple/app/src/main/res/layout/: activity_bluetooth_key_exchange.xml  activity_file_encryption.xml  activity_help.xml  activity_key_exchange_mode.xml  activity_key_exchange_process.xml  activity_main.xml  activity_password_settings.xml  activity_password_vault.xml  activity_pqc_key_exchange.xml  item_bluetooth_device.xml
Pineapple/app/src/main/res/xml/: autofill_service.xml
Pineapple/app/src/main/rust/: Cargo.toml
Pineapple/app/src/main/rust/src/: lib.rs
Pineapple/app/src/main/rust/src/rusty_api/: api.rs  hybrid.rs
android/: settings.gradle.kts
android/app/: build.gradle.kts  lint-baseline.xml
android/app/src/androidTest/java/com/pqrypt/app/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml  CMakeLists.txt
android/app/src/main/cpp/: c_ffi.h  rusty_crypto_jni.cpp
android/app/src/main/java/com/pqrypt/app/: BluetoothDeviceAdapter.kt  BluetoothKeyExchangeActivity.kt  FileEncryptionActivity.kt  HelpActivity.kt  KeyExchangeModeActivity.kt  KeyExchangeProcessActivity.kt  MainActivity.kt  PQCKeyExchangeActivity.kt  PQryptAutofillService.kt  PasswordSettingsActivity.kt  PasswordVaultActivity.kt  RustyCrypto.java  SecureShareBluetoothFileActivity.kt  SecureShareBluetoothTextActivity.kt  SecureShareHelpActivity.kt  SecureShareManualFileActivity.kt  SecureShareManualTextActivity.kt  SecureShareModeActivity.kt
android/app/src/main/res/drawable/: edittext_border.xml  ic_launcher_foreground.xml  logo.xml
android/app/src/main/res/layout/: activity_bluetooth_key_exchange.xml  activity_file_encryption.xml  activity_help.xml  activity_key_exchange_mode.xml  activity_key_exchange_process.xml  activity_main.xml  activity_password_settings.xml  activity_password_vault.xml  activity_pqc_key_exchange.xml  activity_secure_share_bluetooth_file.xml  activity_secure_share_bluetooth_text.xml  activity_secure_share_help.xml  activity_secure_share_manual_file.xml  activity_secure_share_manual_text.xml  activity_secure_share_mode.xml  item_help.xml
android/app/src/main/res/values/: colors.xml  fonts.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/rust/: Cargo.toml  cipher_1024.rs
android/app/src/main/rust/src/: c_ffi.rs  lib.rs
android/app/src/main/rust/src/rusty_api/: api.rs  asymmetric.rs  constants_errors.rs  hybrid.rs  mod.rs  password.rs  symmetric.rs  utils.rs
android/app/src/test/java/com/pqrypt/app/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
desktop/: Cargo.toml
desktop/.cargo/: config.toml
desktop/src/: lib.rs  main.rs  secure_share.rs
desktop/src/rusty_api/: api.rs  asymmetric.rs  constants_errors.rs  hybrid.rs  mod.rs  password.rs  utils.rs
desktop/ui/: main.slint
rustUI/: Cargo.toml
rustUI/.cargo/: config.toml
rustUI/src/: cipher_1024.rs  lib.rs  main.rs
rustUI/src/rusty_api/: api.rs  asymmetric.rs  symmetric.rs
rustUI/ui/: main.slint
